Fix touch input, Improve hanoi alignment
Hanoi:
- triggers actions on touch started rather than ended
- credit appears at top by default, then jumps to bottom if inadequate space (rather than the inverse)
- can no longer preserve selection while solving

Offmines:
- generalized touch implementation to work for all ui, by merging into mousePressed

--- a/hanoiTowers/style.css
+++ b/hanoiTowers/style.css
@@ -9,9 +9,13 @@ body {
     overflow: hidden;
 }
 
-h1 {
+.center-container {
     text-align: center;
+}
+
+h1 {
     margin: 1vh;
+    display: inline-block;
 }
 
 #canvHolder {
